<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="vm"
            type="com.example.momkn.viewmodel.LoginViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.LoginActivity">

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="#326C34"
                android:textSize="50sp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                android:src="@drawable/alahly"
                app:civ_border_color="#326C34"
                app:civ_border_width="1dp" />


        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/white"
            android:elevation="4dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="24dp"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@id/linear"
            app:layout_constraintEnd_toStartOf="parent"
            android:background="@drawable/background"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="10"
                android:background="@drawable/background_btn_login">



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:orientation="vertical"
                        android:layout_marginTop="15dp"
                        android:layout_weight="7"
                        >
                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:hint="Email"
                            android:text="@={vm.email}"
                            android:inputType="textEmailAddress" />
                        <TextView
                            android:id="@+id/email_error"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="#ff0000"
                            android:layout_marginStart="15dp"
                            android:visibility="@{vm.emailError?View.VISIBLE:View.GONE}"

                            android:text="plese write valid email"
                            />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/text_input_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:errorEnabled="true"
                            app:passwordToggleEnabled="true"
                            android:layout_marginTop="12dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="Password"
                                android:layout_marginStart="15dp"
                                android:layout_marginTop="20dp"
                                android:text="@={vm.password}"
                                android:inputType="textPassword" />
                            <TextView
                                android:id="@+id/pass_error"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="#ff0000"
                                android:layout_marginStart="15dp"
                                android:visibility="@{vm.passwordError?View.VISIBLE:View.GONE}"
                                android:text="please enter valid password"
                                />
                        </com.google.android.material.textfield.TextInputLayout>


                    </LinearLayout>


                    <Button
                        android:id="@+id/btn_log_in"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="16dp"
                        android:background="@drawable/background_btn_login"
                        android:text="@string/login"
                        android:textAllCaps="false"
                        android:textColor="#326C34"
                        android:textSize="22sp"
                        android:onClick="@{()->vm.login()}"
                        app:backgroundTint="#326C34" />
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"

                        >

                    <TextView
                        android:id="@+id/text_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/donot_hava_account"
                        android:textColor="#60778B"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                         />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/Register"
                        android:textColor="#0358A3"
                        android:onClick="@{()->vm.register()}"
                        app:layout_constraintBottom_toBottomOf="@id/text_register"
                        app:layout_constraintStart_toEndOf="@id/text_register"

                        android:textSize="16sp"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>


            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>