<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <import type="android.util.SparseArray"/>
        <variable
            name="vm"
            type="com.example.momkn.viewmodel.RegisterviewModel" />

    </data>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".register.RegisterFragment">


            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_weight="2"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/alahly"
                    app:civ_border_color="#326C34"
                    app:civ_border_width="1dp" />


            </LinearLayout>


            <androidx.cardview.widget.CardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:elevation="4dp"
                app:cardElevation="4dp"
                app:cardCornerRadius="24dp"
                android:layout_margin="8dp"
                app:layout_constraintTop_toBottomOf="@id/linear"
                app:layout_constraintEnd_toStartOf="parent"
                android:background="@drawable/background"
                tools:ignore="MissingConstraints">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:weightSum="10"
                    android:background="@drawable/bc_linear">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_marginTop="15dp"
                        >



                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="15dp"
                                android:hint="Email"
                                android:text="@={vm.email}"
                                android:inputType="textEmailAddress" />
                            <TextView
                                android:id="@+id/email_error"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="#ff0000"
                                android:layout_marginStart="15dp"
                                android:visibility="@{vm.emailError?View.VISIBLE:View.GONE}"

                                android:text="@={vm.emailErrorMessage}"
                                />

                        >

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/text_input_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:counterEnabled="true"
                            app:counterMaxLength="15"
                            app:errorEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="Username"
                                android:layout_marginStart="15dp"
                                android:text="@={vm.userName}"
                                android:inputType="text" />
                            <TextView
                                android:id="@+id/userName_error"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="#ff0000"
                                android:layout_marginStart="15dp"
                                android:visibility="@{vm.userNameError?View.VISIBLE:View.GONE}"

                                android:text="@={vm.userNameErrorMessage}"
                                />
                        </com.google.android.material.textfield.TextInputLayout>
                        >

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/text_input_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:errorEnabled="true"
                            app:passwordToggleEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="Password"
                                android:layout_marginStart="15dp"
                                android:text="@={vm.password}"
                                android:inputType="textPassword" />
                            <TextView
                                android:id="@+id/pass_error"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="#ff0000"
                                android:layout_marginStart="15dp"
                                android:visibility="@{vm.passwordError?View.VISIBLE:View.GONE}"
                                android:text="@={vm.passErrorMessage}"
                                />
                        </com.google.android.material.textfield.TextInputLayout>


                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        android:textColor="@android:color/black"
                        android:textColorHint="#B5B5B5"
                        android:weightSum="2"
                        app:layout_constraintTop_toBottomOf="@id/text_input_password"
                        tools:ignore="Autofill,LabelFor,RtlSymmetry">

                        <TextView
                            android:id="@+id/txt_parent"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="parent"
                            android:textSize="20sp"
                            android:textColor="#326C34" />
                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/bg_item_spinner"
                            >

                            <Spinner
                                android:id="@+id/spinner_parent"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center_horizontal"
                                android:gravity="start|center"
                                android:selectedItemPosition="@={vm.selecteUserPosition}"
                                android:textColor="#326C34" />
                        </RelativeLayout>

                    </LinearLayout>

                        <Button
                            android:id="@+id/button_sign_up"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginRight="16dp"
                            android:background="@drawable/background_btn_login"
                            android:text="@string/sign_up"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="22sp"
                            app:backgroundTint="#326C34"
                            android:onClick="@{()->vm.signUp()}"/>
                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            >
                            <TextView
                                android:id="@+id/text_sign_in"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-black"
                                android:text="@string/already_Registred"
                                android:textColor="#60778B"
                                android:textSize="16sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                android:layout_marginBottom="10dp"

                                 />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-black"
                                android:onClick="@{()->vm.login()}"
                                android:text="@string/login"
                                android:textColor="#3647A3"
                                android:textSize="16sp"
                                android:layout_marginBottom="10dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toEndOf="@+id/text_sign_in" />

                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </LinearLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>



</layout>